# higgsfield-unlimited-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/viral-ugc-ads/: SKILL.md
docs/: EXTENDING.md  MODEL_SCHEMAS.md
higgsfield_unlimited_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  dimensions.py  jobs.py  models.py  pool.py  server.py  service.py  verify.py
tests/: test_offline.py
