[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "higgsfield-unlimited-mcp"
version = "0.1.0"
description = "A complete MCP server for Higgsfield AI that calls the generation API in unlimited mode (all image/video/audio models)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "higgsfield-unlimited-mcp contributors" }]
keywords = ["mcp", "higgsfield", "ai", "image-generation", "video-generation", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
higgsfield-unlimited-mcp = "higgsfield_unlimited_mcp.__main__:main"
higgsfield-unlimited-verify = "higgsfield_unlimited_mcp.verify:main"

[project.urls]
Homepage = "https://github.com/nukIeer/higgsfield-unlimited-mcp"
Repository = "https://github.com/nukIeer/higgsfield-unlimited-mcp"
Issues = "https://github.com/nukIeer/higgsfield-unlimited-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["higgsfield_unlimited_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
